[metadata]
author = Felipe Valverde Campos
author_email = felipe.valverde.campos@gmail.com
classifiers =
    Environment :: Web Environment
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    # Operating System :: MacOS
    # Operating System :: Microsoft
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
description = Automatic Web API REST
description-file = README.md
keywords = api rest authentication mongodb automatic web flask json python
license = MIT license
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = auto_api
project_urls =
    Source = https://github.com/fvalverd/AutoApi
    Tracker = https://github.com/fvalverd/AutoApi/issues

[options]
zip_safe = False
include_package_data = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, , !=3.5.*

[aliases]
test = run_tests
tests = run_tests

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --cov=auto_api --cov-report term --cov-report xml

[coverage:run]
branch = True
omit = ./auto_api/__main__.py

[coverage:report]
show_missing=True

[coverage:xml]
output=coverage.xml